[gd_scene load_steps=13 format=3 uid="uid://cuqr8ovfm68t3"]

[ext_resource type="Script" path="res://objects/Enemys/ranger/ranged_enemy.gd" id="1_pjekh"]
[ext_resource type="Script" path="res://objects/hurtbox.gd" id="2_t8yqc"]
[ext_resource type="Script" path="res://objects/Enemys/states/State Machine.gd" id="3_vluf6"]
[ext_resource type="Script" path="res://objects/Enemys/ranger/states/Ranger_Idle.gd" id="6_77wl4"]
[ext_resource type="Script" path="res://objects/Enemys/ranger/states/Ranger_Pathfind.gd" id="7_27qtm"]
[ext_resource type="Script" path="res://objects/Enemys/ranger/states/Ranger_walk_away.gd" id="8_4oevc"]
[ext_resource type="Script" path="res://objects/Enemys/ranger/states/Ranger_Knockback.gd" id="8_7eftn"]
[ext_resource type="Script" path="res://objects/Enemys/ranger/states/Ranger_Attack.gd" id="8_31vvr"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_foq3r"]
size = Vector2(32, 32)

[sub_resource type="LabelSettings" id="LabelSettings_41dxn"]
font_size = 9
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3cj4s"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ihid"]
size = Vector2(32, 32)

[node name="ranged_enemy" type="CharacterBody2D"]
z_index = 3
collision_layer = 4
collision_mask = 7
motion_mode = 1
script = ExtResource("1_pjekh")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.997072, 0, 0.142165, 1)
texture = SubResource("PlaceholderTexture2D_foq3r")

[node name="Label" type="Label" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = -1.0
text = "Enemy"
label_settings = SubResource("LabelSettings_41dxn")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
avoidance_layers = 2
avoidance_mask = 2

[node name="hurtbox" type="Area2D" parent="." groups=["hurtbox"]]
collision_layer = 4
collision_mask = 0
monitoring = false
script = ExtResource("2_t8yqc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource("RectangleShape2D_3cj4s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0ihid")

[node name="attack_cooldown" type="Timer" parent="."]
one_shot = true

[node name="State_Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_vluf6")
initial_state = NodePath("Ranger_Pathfind")

[node name="Ranger_Idle" type="Node" parent="State_Machine"]
script = ExtResource("6_77wl4")

[node name="Ranger_Pathfind" type="Node" parent="State_Machine"]
script = ExtResource("7_27qtm")

[node name="Ranger_walk_away" type="Node" parent="State_Machine"]
script = ExtResource("8_4oevc")

[node name="Ranger_Knockback" type="Node" parent="State_Machine"]
script = ExtResource("8_7eftn")

[node name="Ranger_Attack" type="Node" parent="State_Machine"]
script = ExtResource("8_31vvr")
